--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,9 @@
                     <div class="caption">
                         <h4><%= car.name %></h4>
                     </div>
+                <p>
+                    <a href="/cars/<%= car._id %>" class="btn btn-primary">More Info</a>
+                </p>
                 </div>
             </div>
         <%}); %>
