--- a/views/show.ejs
+++ b/views/show.ejs
@@ -4,4 +4,11 @@
 <img src="<%= car.image %>">
 
 <p><%= car.description %></p>
+
+<% car.comments.forEach(comment=>{ %>
+    <p>
+        <strong><%= comment.author %></strong> - <%= comment.text %>
+    </p>
+<% }) %>
+
 <% include partials/footer %>
