--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -1,4 +1,4 @@
-<% include partials/header %>
+<% include ../partials/header %>
 <h1><%=car.name%></h1>
 
 <img src="<%= car.image %>">
@@ -11,4 +11,4 @@
     </p>
 <% }) %>
 
-<% include partials/footer %>
+<% include ../partials/footer %>
