--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -1,14 +1,42 @@
 <% include ../partials/header %>
-<h1><%=car.name%></h1>
-
-<img src="<%= car.image %>">
-
-<p><%= car.description %></p>
-
-<% car.comments.forEach(comment=>{ %>
-    <p>
-        <strong><%= comment.author %></strong> - <%= comment.text %>
-    </p>
-<% }) %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            <p class="lead">BMW blog</p>
+            <div class="list-group">
+                <li class="list-group-item active">Info 1</li>
+                <li class="list-group-item">Info 2</li>
+                <li class="list-group-item">Info 3</li>
+            </div>
+        </div>
+        <div class="col-md-9">
+            <div class="thumbnail">
+                <img class="img-responsive" src=" <%= car.image %>">
+                <div class="caption-full">
+                    <h4 class="pull-right">$99.999,00</h4>
+                    <h4><a><%=car.name%></a></h4>
+                    <p><%= car.description %></p>
+                </div>
+            </div>
+            <div class="well">
+                <div class="text-right">
+                    <a class="btn btn-success" href="/cars/<%= car._id %>/comments/new">Add New Comment</a>
+                </div>
+                <hr>
+                <% car.comments.forEach(comment=>{ %>
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong><%= comment.author %></strong>
+                            <span class="pull-right">10 days ago</span>
+                            <p>
+                                <%= comment.text %>
+                            </p>
+                        </div>
+                    </div>
+                <% }) %>
+            </div>
+        </div>
+    </div>
+</div>
 
 <% include ../partials/footer %>
