- added login verification while create a new post; - added author to newly created post;

--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -16,6 +16,9 @@
                     <h4 class="pull-right">$99.999,00</h4>
                     <h4><a><%=car.name%></a></h4>
                     <p><%= car.description %></p>
+                    <p>
+                        <em>Submitted By <%= car.author.username %></em>
+                    </p>
                 </div>
             </div>
             <div class="well">
