--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -17,8 +17,14 @@
                     <h4><a><%=car.name%></a></h4>
                     <p><%= car.description %></p>
                     <p>
-                        <em>Submitted By <%= car.author.username %></em>
+                        <em>Submitted By <strong><%= car.author.username %></strong></em>
                     </p>
+                    <% if(currentUser && car.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-xs btn-warning" href="/cars/<%= car._id %>/edit">Edit</a>
+                        <form class="delete-form" action="/cars/<%= car._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
+                    <% } %>
                 </div>
             </div>
             <div class="well">
@@ -34,6 +40,13 @@
                             <p>
                                 <%= comment.text %>
                             </p>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                        <a class="btn btn-xs btn-warning" 
+                        href="/cars/<%= car._id %>/comments/<%=comment._id %>/edit">Edit</a>
+                        <form class="delete-form" action="/cars/<%= car._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
+                            <button class="btn btn-xs btn-danger">Delete</button>
+                        </form>
+                        <% } %>
                         </div>
                     </div>
                 <% }) %>
