--- a/views/cars/edit.ejs
+++ b/views/cars/edit.ejs
@@ -8,6 +8,9 @@
                         <input class="form-control" type="text" name="car[name]" value="<%= car.name %>">
                     </div>
                     <div class="form-group">
+                        <input class="form-control" type="number" name="car[price]" value="<%= car.price %>" min="0.01" step="0.01">
+                    </div>
+                    <div class="form-group">
                         <input class="form-control" type="text" name="car[image]" value="<%= car.image %>">
                     </div>
                     <div class="form-group">
