--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -13,7 +13,7 @@
             <div class="thumbnail">
                 <img class="img-responsive" src=" <%= car.image %>">
                 <div class="caption-full">
-                    <h4 class="pull-right">$99.999,00</h4>
+                    <h4 class="pull-right">$<%= car.price %></h4>
                     <h4><a><%=car.name%></a></h4>
                     <p><%= car.description %></p>
                     <p>
