- added Admin user functionality; - added functionality to check time after post or comment was created;

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -37,9 +37,15 @@
                     </li>
                     <% } else { %>
                         <li>
-                            <a href="#">Signed In As
-                                <%= currentUser.username %>
-                            </a>
+                            <% if(currentUser.isAdmin) { %>
+                                <a href="#">Hello
+                                    <strong><%= currentUser.username %></strong> You are logged in as an Admin
+                                </a>
+                            <% } else { %>
+                                <a href="#">Hello
+                                    <strong><%= currentUser.username %></strong>
+                                </a>
+                            <% } %>    
                         </li>
                         <li>
                             <a href="/logout">Logout</a>
