--- a/views/cars/show.ejs
+++ b/views/cars/show.ejs
@@ -17,10 +17,8 @@
                     <h4 class="pull-right">$<%= car.price %></h4>
                     <h4><a><%=car.name%></a></h4>
                     <p><%= car.description %></p>
-                    <p>
-                        <em>Submitted By <strong><%= car.author.username %></strong></em>
-                    </p>
-                    <% if(currentUser && car.author.id.equals(currentUser._id)){ %>
+                    <p><em>Submitted by: <strong><%= car.author.username %></strong>     <%= moment(car.createdAt).fromNow() %></em></p>
+                    <% if(currentUser && car.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
                         <a class="btn btn-xs btn-warning" href="/cars/<%= car._id %>/edit">Edit</a>
                         <form class="delete-form" action="/cars/<%= car._id %>?_method=DELETE" method="POST">
                             <button class="btn btn-xs btn-danger">Delete</button>
@@ -37,11 +35,13 @@
                     <div class="row">
                         <div class="col-md-12">
                             <strong><%= comment.author.username %></strong>
-                            <span class="pull-right">10 days ago</span>
+                            <span class="pull-right">
+                                <%= moment(comment.createdAt).fromNow() %>
+                            </span>
                             <p>
                                 <%= comment.text %>
                             </p>
-                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser && currentUser.isAdmin){ %>
                         <a class="btn btn-xs btn-warning" 
                         href="/cars/<%= car._id %>/comments/<%=comment._id %>/edit">Edit</a>
                         <form class="delete-form" action="/cars/<%= car._id %>/comments/<%=comment._id %>?_method=DELETE" method="POST">
